# rslint-staged

./: .gitignore  .lintstagedrc.json  Cargo.toml  README.md  package.json  pnpm-lock.yaml
src/: cli.rs  git.rs  main.rs
