[package]
name = "rslint-staged"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "lint-staged rust implementation with 100% API compatible."
keywords = ["lint-staged"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.14.2"
serde_json = "1.0"
globset = "0.4.8"
rayon = "1.5.1"
log = "0.4.16"
simple_logger = "2.1.0"
clap = { version = "3.1.6", features = ["derive"] }
anyhow = "1.0.56"